# cli-tool

./: .gitignore  README.md  agent-cli-helper  cli-tool  cli-tool-manage  humans.md  llms.md  pyproject.toml  requirements.txt  setup.py
agent-cli-helper-skill/: SKILL.md
agent_cli_helper.egg-info/: PKG-INFO
cli-tool-skill/: SKILL.md
cli_tool/: __init__.py  main.py  manage.py
tests/: __init__.py  test_cli_tool.py
