[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-cli-helper"
version = "0.2.4"
authors = [
  { name="DAY50" },
]
description = "A tmux wrapper for LLMs to interact with full-screen CLI applications"
readme = "README.md"
license = { file = "LICENSE.MIT" }
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = []

[project.urls]
"Homepage" = "https://github.com/day50-dev/acli"

[project.scripts]
agent-cli-helper = "cli_tool.main:main"
acli-manage = "cli_tool.manage:main"


[tool.setuptools]
packages = ["cli_tool"]
